# gwsw

./: .gitignore  README.md  pyproject.toml
analysis/: all-cases.py  analyze.py  clay.py  convergence-failure.py  sand-single-layer.py  selection.py  single-layer-brook.py  single-layer-clay.py  single-layer-peat.py  single-layer-sand.py  single-plot.py  visualization-example.py
gwsw/: analytical.py  analytical_np.py  numerical_model.py  results_reader.py
sectiondata/: single-layer-basic.csv  single-layer-brook.csv  single-layer-clay.csv  single-layer-peat.csv  single-layer-sand.csv  two-layer-brook.csv  two-layer-clay.csv  two-layer-peat.csv  two-layer-sand.csv
