[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwsw"
description = "2D MODFLOW6 models for groundwater surface water interaction"
readme = "README.md"
maintainers = [{ name = "Huite Bootsma", email = "huite.bootsma@deltares.nl" }]
requires-python = ">=3.10"
dependencies = ['imod']
dynamic = ["version"]
license = { text = "MIT" }

[tool.hatch.version]
path = "gwsw/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["gwsw"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
imod = "*"
ipykernel = "*"
pip = "*"
jupyter = "*"

[tool.pixi.tasks]
install = "pip install --editable ."
